== Fri Nov 13 00:31:04 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Hacked and mutilated the network section, made it easier to extend out with other
  delivery and retriever methods.  API changed SLIGHTLY with this.  Please check the
  readme
* Resolved Issue #8 - Mail::SMTP now delivers to all mail.destinations
* Version bump to 1.2.5

== Thu Nov 12 02:58:01 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #5 - Message ID not handling multiple periods in left hand side
* Resolved Issue #6 - Ordering of add_file and body items causes invalid emails

== Tue Nov 10 08:15:14 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #5 - Message ID generation issue
* Resolved Issue #7 - README add_file examples don't seem to work - Updated readme and
  rdoc in Message#add_file

== Mon Nov  9 23:38:33 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Added ability to create new email via a hash or hash-like object. <mikel>
* Moved all of the Part init into the Message class.  Part now just uses Message's init,
  also moved all the attachment related functions into Message.  As Part is a subclass
  of message, you shouldn't see any interface changes here.

== Fri Nov  6 22:52:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* a6ef2b4: Fixed Issue #4 - Can't call encoding on non existant 
  content-transer-encoding header

== Fri Nov  6 00:51:55 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Handled unstructured field folding "blank" lines
* Fixed error in header.rb that created fields into an array, instead of a FieldList, resulting
  in mail.encode returning a random sort order on the header.
* Made unstructured fields attempt to decode their values on :decode

== Thu Nov  5 04:45:31 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* 2acb70a: Closes Issue #1 - Handling badly formatted content-type fields <mikel>

== Wed Nov  4 23:24:32 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
