@@ -1,3 +1,7 @@
+== Sat Nov 14 08:20:21 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
+
+* Resolved Issue #10 - empty/nil cc/bcc field causes exception (Mail::Field::ParseError)
+
 == Fri Nov 13 00:31:04 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
 * Hacked and mutilated the network section, made it easier to extend out with other
